--- a/config/locales/en/sdg.yml
+++ b/config/locales/en/sdg.yml
@@ -458,7 +458,8 @@ en:
       goal_list: "Goal list"
       help:
         title: "Which SDGs and targets are aligned with my %{record}?"
-      hint: "You can introduce the code of a specific goal/target or a text to find one"
+        text: "help"
+      hint: You can introduce the code of a specific goal/target or a text to find one. For more information visit the %{link} page.
       placeholder: "Write a goal or target code or description"
       remove_tag: "Remove"
     targets:
