--- a/config/locales/es/sdg.yml
+++ b/config/locales/es/sdg.yml
@@ -458,7 +458,8 @@ es:
       goal_list: "Listado de objetivos"
       help:
         title: "¿Qué ODS y metas se alinean con mi %{record}?"
-      hint: "Puedes introducir el código de un objetivo/meta específico o un texto para encontrar uno"
+        text: "ayuda"
+      hint: Puedes introducir el código de un objetivo/meta específico o un texto para encontrar uno. Para más información visita la página de %{link}.
       placeholder: "Escribe las etiquetas que desees"
       remove_tag: "Eliminar"
     targets:
